[package]
name = "elite-rpc"
version = "0.0.3"
edition = "2021"
authors = ["Vincenzo Palazzo <vincenzopalazzodev@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/vincenzopalazzo/elite-rpc"
repository = "https://github.com/vincenzopalazzo/elite-rpc.git"
description = "Type Safe JSON RPC like client with different transport and protocols layers."
keywords = [ "rpc-api", "generic-api-lib", "rpc", "elite-lib", "elite-rpc" ]


[dependencies]
serde_json = "1.0"
serde = "1.0"
anyhow = "1.0.81"
log = "0.4.17"
curl = {  version = "0.4.44", optional = true }

[dev-dependencies]
env_logger = "0.9.3"

[features]
curl = ["dep:curl"]
